tests/textual/error/lessThanInteger-string-wrong-1st-argument.uplc
(program 1.0.0[[(builtin lessThanInteger)(con string "Ola")](con integer 10)])